--- a/ToDidApi/.gitignore
+++ b/ToDidApi/.gitignore
@@ -1,5 +1,9 @@
-bin/
-obj/
-/packages/
-riderModule.iml
-/_ReSharper.Caches/
+**/Dependencies
+**/Properties
+**/Migrations
+**/obj
+**/bin
+
+*.sln
+*.sqlite
+*.db*
